Added settings, confirmation a little, profile info

--- a/views/signIn.html
+++ b/views/signIn.html
@@ -13,6 +13,7 @@
     <div class="mainSection">
         <h2>The Name Game</h2>
         <div class="signForm">
+            #error#
             <div class="loginInput">
                 <span>Login</span>
                 <div>
@@ -34,5 +35,11 @@
     <div class="signMessage">
         <span class="signInLabel">Don`t have an account? <u class="signInLink" onclick="window.location.assign('/signUp')">Create account</u></span>
     </div>
+    <div class="signMessage">
+        <span class="signInLabel">Forget password? <u class="signInLink" onclick="window.location.assign('/reminder')">Remind me!</u></span>
+    </div>
+    <footer>
+        <p>© Duderick and DarunKa company limited.AM</p>
+    </footer>
 </body>
 </html>
