--- a/views/signUp.html
+++ b/views/signUp.html
@@ -9,8 +9,7 @@
     <script src="https://kit.fontawesome.com/63fb3be0e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form action="/user/create" method="POST">
-        #TEXT#
+    <form action="/create" method="POST">
     <div class="mainSection">
         <h2>The Name Game</h2>
         <div class="signForm signUpForm">
@@ -63,6 +62,9 @@
     <div class="signMessage">
         <span class="signInLabel">Already have an account? <u class="signInLink" onclick="window.location.assign('/signIn')">Sign in</u></span>
     </div>
+    <footer>
+        <p>© Duderick and DarunKa company limited.AM</p>
+      </footer>
     <script>
         document.querySelector("button").addEventListener('click', function(element) { validate(element)});
         function validate(element) {
