--- a/public/home.css
+++ b/public/home.css
@@ -22,7 +22,7 @@
     margin: 0;
 }
 
-.home-menu img {
+.home-menu img, #userInfo img {
     width: 56px;
     height: 58px;
     border-radius: 50px;
@@ -69,4 +69,62 @@ body:nth-child(2) {
 		transform: scale(0.95);
 		box-shadow: 0 0 0 0 rgba(80, 0, 171, 0);
 	}
+}
+
+.fa-gear, .fa-chart-line, .fa-right-from-bracket {
+    transform: scale(1);
+    transition-duration: 1s;
+}
+
+.settingBtn:hover .fa-gear, .statBtn:hover .fa-chart-line, .logOutBtn:hover .fa-right-from-bracket{
+    transform: scale(1.3);
+    transition-duration: 1s;
+}
+
+.settingBtn:hover .fa-gear {
+    transform: rotate(180deg) scale(1.3);
+}
+
+#userInfo {
+    display: none;
+    position: absolute;
+    z-index: 10;
+    height: 150px;
+    width: 400px;
+    top: 19px;
+    right: 8px;
+    background-color: white;
+    border-radius: 15px;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0px 9px 41px 3px rgba(162,87,248,0.7);
+    padding: 20px;
+}
+
+.loginAndAvatar, .fullname, .email {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.loginAndAvatar span {
+    width: 80%;
+    font-size: 24px;
+    font-weight: bolder;
+    color: #a257f8;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.fullnameText, .emailText {
+    color: #a257f8;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.fullname, .email {
+    align-items: flex-start;
 }
