--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,9 @@
     <button id="pressPlay" onclick="window.location.assign('/signIn')">Press to play!</button>
   </div>
 </div>
-
+<footer>
+  <p>© Duderick and DarunKa company limited.AM</p>
+</footer>
 </body>
 
 </html>
