--- a/views/settings.html
+++ b/views/settings.html
@@ -30,14 +30,61 @@
         </div>
     </div>
     <div class="mainSection menuSection">
-        <h4>The Name Game</h4>
+        <h4 onclick="window.location.assign('/home')">The Name Game</h4>
         <div class="home-menu">
             <button type="submit" class="statBtn"><i class="fa-solid fa-chart-line"></i></button>
-            <button onclick="window.location.assign('/settings')" type="submit" class="settingBtn"><i class="fa-solid fa-gear"></i></button>
+            <button onclick="window.location.assign('/home')" type="submit" class="settingBtn"><i class="fa-solid fa-gear"></i></button>
             <img onclick="showUserInfo()" src="shaggy_avatar.jpg">
         </div>
     </div>
-    <button type="submit" class="startGameBtn"><i class="fa-solid fa-play"></i> Start game</button>
+    <form action="/settings" method="POST">
+        #status#
+    <div class="mainSection">
+        <div class="column">
+            <div class="loginInput">
+                <span>Fullname</span>
+                <div>
+                    <i class="fa-solid fa-signature"></i>
+                    <input type="text" name="fullname" placeholder="Enter your fullname" id="signUpFullname">
+                </div>
+            </div>
+        </div>
+
+        <div class="loginInput emailInput">
+            <span>Email</span>
+            <div>
+                <i class="fa-solid fa-envelope"></i>
+                <input type="email" name="email" placeholder="Enter your email" id="signUpEmail">
+            </div>
+        </div>
+
+        <div class="loginInput avatarInput">
+            <span>Avatar</span>
+            <div>
+                <i class="fa-solid fa-envelope"></i>
+                <input type="email" name="avatar" placeholder="Enter your avatar" id="signUpAva">
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="loginInput">
+                <span>New password</span>
+                <div>
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" name="password" placeholder="Enter your new password" id="signUpPass">
+                </div>
+            </div>
+            <div class="loginInput">
+                <span>Confirm: Input password</span>
+                <div>
+                    <i class="fa-solid fa-key"></i>
+                    <input type="password" name="passwordCheck" placeholder="Enter your old password" id="signUpPassCheck" required>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button type="submit">Change settings</button>
+    </form>
     <div>
         <button onclick="window.location.assign('/logout')" type="submit" class="logOutBtn"><i class="fa-solid fa-right-from-bracket"></i></button>
     </div>
