--- a/views/settings.html
+++ b/views/settings.html
@@ -32,7 +32,7 @@
     <div class="mainSection menuSection">
         <h4 onclick="window.location.assign('/home')">The Name Game</h4>
         <div class="home-menu">
-            <button onclick="window.location.assign('/settings')" type="submit" class="statBtn"><i class="fa-solid fa-chart-line"></i></button>
+            <button onclick="window.location.assign('/stats')" type="submit" class="statBtn"><i class="fa-solid fa-chart-line"></i></button>
             <button onclick="window.location.assign('/home')" type="submit" class="settingBtn"><i class="fa-solid fa-gear"></i></button>
             <u onclick="showUserInfo()">#avatar2#</u>
         </div>
