--- a/views/signIn.html
+++ b/views/signIn.html
@@ -13,7 +13,7 @@
     <div class="mainSection">
         <h2>The Name Game</h2>
         <div class="signForm">
-            #error#
+            <div id="hidden_if_empty">#error#</div>
             <div class="loginInput">
                 <span>Login</span>
                 <div>
@@ -42,4 +42,10 @@
         <p>© Duderick and DarunKa company limited.AM</p>
     </footer>
 </body>
+<script>
+    window.onload = function() {
+    let hidden_if_empty = document.getElementById('hidden_if_empty');
+    hidden_if_empty.style.display = (hidden_if_empty.innerHTML.trim() === '#error#') ? 'none' : 'block';
+  };
+</script>
 </html>
