--- a/public/home.css
+++ b/public/home.css
@@ -1,6 +1,7 @@
 .logOutBtn {
-    float: right;
-    margin: 230px 20px 0 0;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
     cursor: pointer;
     border-radius: 50px;
 }
@@ -24,7 +25,7 @@
 
 .home-menu img, #userInfo img {
     width: 56px;
-    height: 58px;
+    height: 57px;
     border-radius: 50px;
     cursor: pointer;
 }
@@ -37,6 +38,7 @@
 
 h4 {
     color: white;
+    cursor: pointer;
 }
 
 body:nth-child(2) {
