--- a/views/signIn.html
+++ b/views/signIn.html
@@ -11,7 +11,7 @@
 <body>
     <form action="/signIn" method="post">
     <div class="mainSection">
-        <h2>The Name Game</h2>
+        <h2>Scooooooby c@rd</h2>
         <div class="signForm">
             <div id="hidden_if_empty">#error#</div>
             <div class="loginInput">
@@ -28,6 +28,9 @@
                     <input type="password" name="password" placeholder="Enter your password" id="signInPass">
                 </div>
             </div>
+            <div class="signMessage">
+                <span class="signInLabel">Forget password? <u class="signInLink" onclick="window.location.assign('/reminder')">Remind me!</u></span>
+            </div>
         </div>
         <button type="submit" class="signInBtn">Sign in</button>
     </div>
@@ -35,17 +38,14 @@
     <div class="signMessage">
         <span class="signInLabel">Don`t have an account? <u class="signInLink" onclick="window.location.assign('/signUp')">Create account</u></span>
     </div>
-    <div class="signMessage">
-        <span class="signInLabel">Forget password? <u class="signInLink" onclick="window.location.assign('/reminder')">Remind me!</u></span>
-    </div>
     <footer>
         <p>© Duderick and DarunKa company limited.AM</p>
     </footer>
 </body>
 <script>
     window.onload = function() {
-    let hidden_if_empty = document.getElementById('hidden_if_empty');
-    hidden_if_empty.style.display = (hidden_if_empty.innerHTML.trim() === '#error#') ? 'none' : 'block';
-  };
+        let hidden_if_empty = document.getElementById('hidden_if_empty');
+        hidden_if_empty.style.display = (hidden_if_empty.innerHTML.trim() === '#error#') ? 'none' : 'block';
+    };
 </script>
 </html>
