--- a/views/stats.html
+++ b/views/stats.html
@@ -6,6 +6,7 @@
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="home.css">
+    <link rel="stylesheet" type="text/css" href="stats.css">
     <script src="https://kit.fontawesome.com/63fb3be0e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -32,7 +33,7 @@
     <div class="mainSection menuSection">
         <h4 onclick="window.location.assign('/home')">The Name Game</h4>
         <div class="home-menu">
-            <button onclick="window.location.assign('/home')" type="submit" class="statBtn"><i class="fa-solid fa-chart-line"></i></button>
+            <button onclick="window.location.assign('/home')" type="submit" class="statBtn"><i class="fa-solid fa-xmark"></i></button>
             <button onclick="window.location.assign('/settings')" type="submit" class="settingBtn"><i class="fa-solid fa-gear"></i></button>
             <u onclick="showUserInfo()">#avatar2#</u>
         </div>
