--- a/views/home.html
+++ b/views/home.html
@@ -11,16 +11,19 @@
 <body>
     <div id="userInfo">
         <div onclick="hideUserInfo()" class="loginAndAvatar">
+            <!-- add user`s login in span text and in span title and users photo in img -->
             #login#
             <!-- <span title="ShaggyAndScoobyDoo11111111111111111111111">ShaggyAndScoobyDoo11111111111111111111111</span> -->
             #avatar1#
         </div>
         <div class="fullname">
+            <!-- add user`s fullname in span text and in span title -->
             <span>Fullname:</span>
             #fullname#
             <!-- <span title="Shaggy Rojers" class="fullnameText">Shaggy Rojers</span> -->
         </div>
         <div class="email">
+            <!-- add user`s email in span text and in span title -->
             <span>Email:</span>
             #email#
             <!-- <span title="shaggy.Rojers0908@gmail.com" class="emailText">shaggy.Rojers0908@gmail.com</span> -->
@@ -36,7 +39,7 @@
     </div>
     <button onclick="window.location.assign('/room_chat')" type="submit" class="startGameBtn"><i class="fa-solid fa-play"></i> Start game</button>
     <div>
-        <button onclick="window.location.assign('/logout')" type="submit" class="logOutBtn"><i class="fa-solid fa-right-from-bracket"></i></button>
+        <button onclick="logOut()" type="submit" class="logOutBtn"><i class="fa-solid fa-right-from-bracket"></i></button>
     </div>
     <footer>
         <p>© Duderick and DarunKa company limited.AM</p>
@@ -49,6 +52,15 @@
 
     function hideUserInfo () {
         document.getElementById("userInfo").style.display='none';
+    }
+
+    let userLogin = document.querySelector('.loginText').innerText;
+    console.log(userLogin);
+    localStorage.setItem('userLogin', userLogin);
+
+    function logOut() {
+        localStorage.clear();
+        window.location.assign('/logout');
     }
 </script>
 </html>
