--- a/views/chat.html
+++ b/views/chat.html
@@ -4,6 +4,7 @@
     <title>card game</title>
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="zhopa.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <!-- ЧАТ -->
