--- a/views/settings.html
+++ b/views/settings.html
@@ -66,7 +66,7 @@
             </div>
 
             <div class="loginInput">
-                <span>Old password</span>
+                <span>Old password *</span>
                 <div>
                     <i class="fa-solid fa-lock"></i>
                     <input type="password" name="passwordCheck" placeholder="Enter your old password" id="signUpPassCheck" required>
