--- a/views/settings.html
+++ b/views/settings.html
@@ -83,13 +83,16 @@
 
             <button type="submit" class="changeSettingsBtn">Change settings</button>
         </div>
+        </form>
+        <form action="/delete" method="POST">
+            <button type="submit" class="changeSettingsBtn">DELETE ACCOUNT</button>
+        </form>
         <div>
             <button onclick="window.location.assign('/logout')" type="submit" class="logOutBtn"><i class="fa-solid fa-right-from-bracket"></i></button>
         </div>
         <footer>
             <p>© Duderick and DarunKa company limited.AM</p>
         </footer>
-    </form>
 </body>
 <script>
     function showUserInfo () {
