--- a/views/chat.html
+++ b/views/chat.html
@@ -241,17 +241,14 @@ document.addEventListener('DOMContentLoaded', function () {
     const cards = document.getElementsByClassName('card');
     const audioPlayer = document.getElementById('audioPlayer');
     cards.volume = 0.01;
-    Array.from(cards).forEach(function (card) {
-    card.addEventListener('click', function () {
-      console.log(card.classList.contains('disabled-card'));
-      if (audioPlayer.paused) {
-        audioPlayer.play();
-      } else {
-        audioPlayer.pause();
-        audioPlayer.currentTime = 0;
-      }
-    });
-  });
+    cards.map(addEventListener('click', function (card) {
+        if (audioPlayer.paused) {
+            audioPlayer.play();
+        } else {
+            audioPlayer.pause();
+            audioPlayer.currentTime = 0;
+        }
+    }));
 });
 
     </script>
