--- a/views/chat.html
+++ b/views/chat.html
@@ -37,6 +37,7 @@
           <!-- Тут будуть карти гравця -->
       </div>
     </div>
+    <audio id="audioPlayer" src="flipcard.mp3"></audio>
 
 
 
